# gaussian-preact

./: .gitignore  ActFunction_theta-10.00.pkl  ActFunction_theta-2.05.pkl  ActFunction_theta-2.20.pkl  ActFunction_theta-4.00.pkl  ActFunction_theta-5.00.pkl  ActFunction_theta-7.00.pkl  ActFunction_theta-8.00.pkl  ActFunction_theta-9.00.pkl  ActInterpolation_theta-2.10.pkl  ActInterpolation_theta-2.20.pkl  ActInterpolation_theta-3.00.pkl  ActInterpolation_theta-8.00.pkl  ActInterpolation_theta-9.00.pkl  Data_Init_KS_2layerNN_stat.pkl  DensityFunc_theta-10.00.pkl  DensityFunc_theta-2.10.pkl  DensityFunc_theta-2.50.pkl  DensityFunc_theta-3.00.pkl  DensityFunc_theta-4.00.pkl  DensityFunc_theta-6.00.pkl  DensityFunc_theta-7.00.pkl  DensityFunc_theta-9.00.pkl  Example01_Full_computation.ipynb  Example01_prototype.ipynb  Example02_positive_phi.ipynb  Example03_Gaussianity.ipynb  README.md  dct_densities.pkl  pyproject.toml  setup.py
gaussian_preact/: __init__.py  activation.py  integration.py  optimization.py  samplers.py
objects/: ActFunctionPos_theta-10.00.pkl  ActFunctionPos_theta-2.05.pkl  ActFunctionPos_theta-2.50.pkl  ActFunctionPos_theta-3.00.pkl  ActFunctionPos_theta-4.00.pkl  ActFunctionPos_theta-5.00.pkl  ActFunctionPos_theta-7.00.pkl  ActFunction_theta-10.00.pkl  ActFunction_theta-2.05.pkl  ActFunction_theta-2.10.pkl  ActFunction_theta-2.20.pkl  ActFunction_theta-2.50.pkl  ActFunction_theta-3.00.pkl  ActFunction_theta-4.00.pkl  ActFunction_theta-5.00.pkl  ActFunction_theta-6.00.pkl  ActFunction_theta-7.00.pkl  ActFunction_theta-8.00.pkl  ActFunction_theta-9.00.pkl  (+18 more)
(+9 files in other folders)
